Menu de Relatórios

--- a/application/layouts/scripts/admin.phtml
+++ b/application/layouts/scripts/admin.phtml
@@ -30,6 +30,7 @@
                 <ul>
                     <li><a href="<?= $this->url(array("controller" => "index", "action" => "index"), null, true) ?>">Página Inicial</a></li>
                     <li><a href="<?= $this->url(array("controller" => "noticias", "action" => "index"), null, true) ?>">Monitoramento</a></li>
+                    <li><a href="<?= $this->url(array("controller" => "index-admin", "action" => "index"), null, true) ?>">Relatórios</a></li>
                     <li><a href="<?= $this->url(array("controller" => "instituicoes", "action" => "index"), null, true) ?>">Instituições</a></li>
                     <li><a href="<?= $this->url(array("controller" => "equipe", "action" => "index"), null, true) ?>">Equipe</a></li>
                     <li><a href="<?= $this->url(array("controller" => "novidades", "action" => "index"), null, true) ?>">Novidades</a></li>
